--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:api": "ts-node src/server.ts",
+    "db:migrate": "prisma migrate dev"
   },
   "keywords": [],
   "author": "",
@@ -17,13 +19,20 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@fastify/cors": "^11.1.0",
+    "@fastify/multipart": "^9.3.0",
     "@google/generative-ai": "^0.24.1",
     "@modelcontextprotocol/sdk": "^1.22.0",
+    "@prisma/client": "5.22.0",
+    "axios": "^1.13.2",
     "docxtemplater": "^3.67.4",
     "dotenv": "^17.2.3",
     "exceljs": "^4.4.0",
+    "fastify": "^5.6.2",
     "mammoth": "^1.11.0",
     "pizzip": "^3.2.0",
+    "prisma": "5.22.0",
+    "puppeteer": "^24.31.0",
     "xmldom": "^0.6.0",
     "zod": "^4.1.13"
   }
