feat: supabase implemented

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 GOOGLE_API_KEY="YOUR_API_KEY"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/mcp_word_caller?schema=public"
+SUPABASE_URL=
+SUPABASE_KEY=
