--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,14 @@
+#AI API
 GOOGLE_API_KEY="YOUR_API_KEY"
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/mcp_word_caller?schema=public"
-SUPABASE_URL=
-SUPABASE_KEY=
+
+#BANCO
+DATABASE_URL="postgresql://your-user:your-password@localhost:5432/mcp_word_caller"
+
+# Azure AD / SharePoint
+AZURE_CLIENT_ID="your-client-id"
+AZURE_TENANT_ID="your-tenant-id"
+AZURE_CLIENT_SECRET="your-client-secret"
+TARGET_USER_ID="your-target-user-id"
+
+# SUPABASE_URL= (Deprecated)
+# SUPABASE_KEY= (Deprecated)
