--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@azure/msal-node": "^3.8.3",
     "@fastify/cors": "^11.1.0",
     "@fastify/multipart": "^9.3.0",
     "@google/generative-ai": "^0.24.1",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "@modelcontextprotocol/sdk": "^1.22.0",
     "@prisma/client": "5.22.0",
     "@supabase/supabase-js": "^2.85.0",
@@ -30,6 +32,7 @@
     "dotenv": "^17.2.3",
     "exceljs": "^4.4.0",
     "fastify": "^5.6.2",
+    "isomorphic-fetch": "^3.0.0",
     "mammoth": "^1.11.0",
     "pizzip": "^3.2.0",
     "prisma": "5.22.0",
