--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@modelcontextprotocol/sdk": "^1.22.0",
     "@prisma/client": "5.22.0",
     "@supabase/supabase-js": "^2.85.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.13.2",
     "docxtemplater": "^3.67.4",
     "dotenv": "^17.2.3",
     "exceljs": "^4.4.0",
     "fastify": "^5.6.2",
     "isomorphic-fetch": "^3.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.11.0",
     "pizzip": "^3.2.0",
     "prisma": "5.22.0",
