--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
-#AI API
-GOOGLE_API_KEY="YOUR_API_KEY"
+# Azure OpenAI
+AZURE_OPENAI_ENDPOINT="https://seu-recurso.openai.azure.com"
+AZURE_OPENAI_API_KEY="sua-chave-api"
+AZURE_OPENAI_DEPLOYMENT="gpt-4o"
+AZURE_OPENAI_API_VERSION="2024-08-01-preview"
+
+# (Deprecated) Google Gemini
+# GOOGLE_API_KEY="YOUR_API_KEY"
 
 #BANCO
 DATABASE_URL="postgresql://your-user:your-password@localhost:5432/mcp_word_caller"
