--- a/package.json
+++ b/package.json
@@ -22,11 +22,10 @@
     "@azure/msal-node": "^3.8.3",
     "@fastify/cors": "^11.1.0",
     "@fastify/multipart": "^9.3.0",
-    "@google/generative-ai": "^0.24.1",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "@modelcontextprotocol/sdk": "^1.22.0",
     "@prisma/client": "5.22.0",
-    "@supabase/supabase-js": "^2.85.0",
+    "@supabase/supabase-js": "^2.86.2",
     "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.13.2",
     "docxtemplater": "^3.67.4",
@@ -36,6 +35,7 @@
     "isomorphic-fetch": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.11.0",
+    "openai": "^6.10.0",
     "pizzip": "^3.2.0",
     "prisma": "5.22.0",
     "puppeteer": "^24.31.0",
